# NetCheckers

./: CMakeLists.txt  README.md
Checkers/: CMakeLists.txt  main.cpp
Core/: CMakeLists.txt  framework.h
Core/Controllers/: BoardController.h
Core/Models/: Board.h
Core/Net/: NetClient.cpp  NetClient.h  NetServer.cpp  NetServer.h
Core/Rules/: BecomeKingRule.h  CaptureKingRule.h  CaptureRule.h  EndGameRule.h  MoveKingRule.h  MoveRule.h  Rules.h
Core/Views/: BoardView.h  LoseView.h  WaitingView.h  WinView.h
Tests/: CMakeLists.txt  CheckersModelTests.h  CheckersNetTests.h  CheckersViewTests.h  main.cpp
